[package]
name = "chain-reaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }
