[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
chain_reaction = { path = "../../chain-reaction",package = "chain-reaction" }
wasm-bindgen = "0.2.80"
itertools = "0.11.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }
